@@ -1,3 +1,8 @@
+2008-04-27  Tamas Nepusz  <ntamas@rmki.kfki.hu>
+
+	* interfaces/python/src/graphobject.c
+	(igraphmodule_Graph_is_mutual) : added
+
 2008-04-25  Gabor Csardi  <csardi@rmki.kfki.hu>
 
 	* src/structural_properties.c (igraph_is_mutual) : added
